:adhesive_bandage: Chore : Member로 변경