@@ -12,6 +12,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
+import java.util.List;
 
 @RequiredArgsConstructor
 @Service
@@ -22,13 +23,13 @@ public class CustomUserDetailsService implements UserDetailsService {
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        return memberMapper.selectUsername(String.valueOf(username))
-                .map(user -> addAuthorities(user))
+        return memberMapper.selectMembername(String.valueOf(username))
+                .map(this::addAuthorities)
                 .orElseThrow(() -> new CustomException(ErrorCode.FIND_FAIL_USER_ID));
     }
 
     private PostMemberReq addAuthorities(PostMemberReq postMemberReq) {
-        postMemberReq.setAuthorities(Arrays.asList(new SimpleGrantedAuthority(postMemberReq.getRole())));
+        postMemberReq.setAuthorities(List.of(new SimpleGrantedAuthority(postMemberReq.getRole())));
 
         return postMemberReq;
     }
